fix: fix api for get setting to list
