# backend/src/routers/setting.routes.ts
@@ -3,9 +3,9 @@ import authService from '../services/auth.service';
 import settingService from '../services/setting.service';
 import { decMiddleware, validateMiddlewareFactory, validateTokenMiddleware } from '../middlewares/middlewares';
 import { DecodedUserInfo } from '../interfaces/auth';
-import { SettingCreate, SettingUpdate } from '../interfaces/setting';
+import { SettingCreate, SettingGetList, SettingUpdate, SettingsDelete } from '../interfaces/setting';
 import response from '../utils/response';
-import { getAddCategoriesObject, getSettingCreateObject, getSettingUpdateObject } from '../object/setting';
+import { getAddCategoriesObject, getSettingCreateObject, getSettingListObject, getSettingUpdateObject, getSettingsDeleteObject } from '../object/setting';
 import { MD5 } from 'crypto-js';
 
 const router = new Router({
@@ -83,21 +83,32 @@ router.post("/", decMiddleware, validateTokenMiddleware,
     ctx.body = response.makeSuccessBody({ list: result });
 })
 
-router.get('/', validateTokenMiddleware, async (ctx) => {
+router.get('/list', validateTokenMiddleware, validateMiddlewareFactory(getSettingListObject), async (ctx) => {
     /*
         #swagger.tags = ['Setting']
         #swagger.summary = 'Get Setting'
         #swagger.security = [{
             bearer:[]
         }]
+        #swagger.parameters[$ref] = ["#/components/parameters/offset", "#/components/parameters/limit"]
         
     */
    
     const token = ctx.header.authorization
+    const postGetList: SettingGetList = ctx.request.query as unknown as SettingGetList;
     const userInfo: any = await authService.decryptToken(token)
-    const setting = await settingService.getSetting(userInfo as DecodedUserInfo)
-    ctx.body = response.makeSuccessBody({ list: setting});
+    const setting = await settingService.getSettingList(userInfo as DecodedUserInfo, postGetList.limit, postGetList.offset)
+    ctx.body = response.makeSuccessBody({ ...setting});
     console.log("/", ctx.body)
+})
+
+router.get('/categories', async (ctx) => {
+    /*
+        #swagger.tags = ['Setting']
+        #swagger.summary = 'Get Categories'
+    */
+    const setting = await settingService.getCategories()
+    ctx.body = response.makeSuccessBody({ list: setting});
 })
 
 
@@ -131,6 +142,31 @@ router.put('/', decMiddleware, validateTokenMiddleware, validateMiddlewareFactor
     const result = await settingService.putSetting(settingUpdate)
     ctx.body = response.makeSuccessBody({ list: result});
 
+})
+
+router.delete('/', decMiddleware, validateTokenMiddleware, validateMiddlewareFactory(getSettingsDeleteObject), async (ctx) => {
+    /*
+        #swagger.tags = ['Setting']
+        #swagger.summary = 'delete Setting'
+        #swagger.security = [{
+            bearer:[]
+        }]
+        #swagger.requestBody = {
+            "content": {
+                "application/json": {
+                    "schema": {
+                        "$ref": "#/definitions/getSettingsDeleteObject"
+                    },
+                    "example": {
+                        "ids": ["(...settingId)"],
+                    }
+                }
+            }
+        }
+    */
+    const settingDelete: SettingsDelete = ctx.request.body as SettingsDelete;
+    const result = await settingService.deleteSetting(settingDelete.ids)
+    ctx.body = response.makeSuccessBody({ list: result});
 })
 
 
